version 9.0.
date: dd/mm/yyyy
  * added the possibility to enable/disable blacklisting on projects with validation already enabled
  * added the possibility to delete triples via Sheet2RDF service addTriples()
  * added a new lexicographer view for streamlined editing of OntoLex-Lemon lexicons
  * updated to LexInfo 3
  * added the support for the Lucene index containing the Project's facets (creating the index and using it for
    the searches)
  * added the possibility to deactivate/activate the Collaboration System for a VB project without removing the
    credentials
  * added the possibility to remove a resource from an issue (Collaboration system: Jira and Freedcamp)
  * implemented project facets
  * added support for the Freecamp collaboration system
  * added support for internationalization (i18n)
  * added data type information in the single-value custom form preview
  * added mapping property to the descriptions of correspondences in the EDOAL data view
  * fixed a bug in the search services on a local project
  * fixed a bug that occurred when updating the email address of an administrator user
  * updates to the OntoPortal deployer, allowing for a specific configuration dedicated to EcoPortal
  * enabled nesting of settings
  * enabled open enumerations in settings
  * align the server to the client concerning validation of properties objects
  * stripped type annotations on the generated service code
  * allowed the use @LanguageTaggedString to annotate types
  * the order of set-typed fields of STProperties is now preserved on deserialization (using a LinkedHashSet)
  * fields inherited by an STProperties are listed before the locally defined ones when producing a 
    serialization for display
  * reimplemented STPropertiesChecker using Hibernate to support additional property constraints
  * updated StoredExportConfiguration to make transformationPipeline optional
  * allowed to manipulate namespace prefixes in project using validation