@@ -1,5 +1,8 @@
 version 9.0.
 date: dd/mm/yyyy
+  * added the possibility to delete a version dump
+  * added the possibility to configure the rendering engine and the uri generator after the initial project
+    creation
   * added the possibility to enable/disable blacklisting on projects with validation already enabled
   * added the possibility to delete triples via Sheet2RDF service addTriples()
   * added a new lexicographer view for streamlined editing of OntoLex-Lemon lexicons
